--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,32 +13,9 @@
             </header>
             <ul>
                 <li><a href="{{ site.url | absolute_url }}">Home</a></li>
-                <li><a href="{{ 'about' | absolute_url }}">About</a></li>
-                <li><a href="{{ 'macaque_species' | absolute_url }}">Macaque Species</a></li>
-                <li>
-                    <span class="opener">Projects</span>
-                    <ul>
-                        <li>
-                            <a href="{{ 'drivers' | absolute_url }}"
-                                >Socio-Ecological Drivers of Social Relationships</a
-                            >
-                        </li>
-                        <li>
-                            <a href="{{ 'diversity' | absolute_url }}">Linking Social Diversity & Complexity</a>
-                        </li>
-                        <li>
-                            <a href="{{ 'steepness' | absolute_url }}">Rank-Related Fitness Benefits & Hierarchy Steepness In Primates</a>
-                        </li>
-                        <li>
-                            <a href="{{ 'pathogens' | absolute_url }}">Predicting Pathogen Spread Across Mammals</a>
-                        </li>
-
-                    </ul>
-                </li>
-		<li><a href="{{ 'database' | absolute_url }}">Database</a></li>   
-                <li><a href="{{ 'latest_news' | absolute_url }}">News</a></li>
-                <li><a href="{{ 'symposia' | absolute_url }}">Symposia</a></li>
-                <li><a href="{{ 'documentation' | absolute_url }}">Documentation</a></li>
+                <li><a href="{{ 'about_me' | absolute_url }}">About Me</a></li>
+                <li><a href="{{ 'research' | absolute_url }}">Research</a></li>
+                <li><a href="{{ 'news' | absolute_url }}">News</a></li>
             </ul>
         </nav>
 
@@ -49,40 +26,19 @@
             </header>
             <ul class="contact">
                 <li class="fa-envelope-o">
-                    <a href="mailto:{{ site.email }}" target="_blank"
-                        >{{ site.email }}</a
-                    >
-                </li>
-                <li class="fa-github">
-                    <a href="{{ site.github_url }}" target="_blank"
-                        >github.com/MacaqueNet</a
-                    >
-                </li>
-                <li class="fa-brands fa-slack">
-                    <a href="https://join.slack.com/t/macaquenet/shared_invite/zt-21mok3cec-HyM3t32bvsSbSYuWqCwqBA" target="_blank"
-                        >macaquenet.slack.com</a
+                    <a href="mailto:w.ohearn2@exeter.ac.uk" target="_blank"
+                        >w.ohearn2@exeter.ac.uk</a
                     >
             </ul>
-        </section>
-
- <!-- Section -->
-        <section>
-            <header class="major">
-                <h2>Newsletter</h2>
-            </header>
-MacaqueNet now has a newsletter! You can read all issues <a href="https://github.com/MacaqueNet/database/tree/main/newsletters" target="_blank">here</a> & make sure you subscribe to Keep up-to-date with the database, current projects, publications & events. 
-<ul class="actions">
-        <li><a href="https://forms.gle/7ThpPydAcAjhFyf17" target="_blank" class="button big">Subscribe</a></li> 
-      </ul>
         </section>
 
 
 <!-- Footer -->
         <footer id="footer">
             <p class="copyright">
-                &copy; 2022 {{ site.title }}. All rights reserved.
+                &copy; 2025 {{ site.title }}. All rights reserved.
                 
-                We thank Julia Watzek for her help & input creating this website. 
+                I thank Julia Watzek and Macaela Skelton for her help & input creating this website. 
             </p>
         </footer>
     </div>
