--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
             </header>
             <ul>
                 <li><a href="{{ site.url | absolute_url }}">Home</a></li>
-                <li><a href="{{ 'about_me' | absolute_url }}">About Me</a></li>
+                <li><a href="{{ 'about' | absolute_url }}">About Me</a></li>
                 <li><a href="{{ 'research' | absolute_url }}">Research</a></li>
                 <li><a href="{{ 'news' | absolute_url }}">News</a></li>
             </ul>
