--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,18 +2,14 @@
   <section id="banner">
     <div class="content">
       <span class="image left">
-        <img src="assets/images/MacaqueNet_Logo_V04-colourB.png" alt=""  />
+        <img src="assets/images/Will_powerpose.JPG" alt=""  />
       </span>
       
       <header>
-        <h1>MacaqueNet</h1>
-        <p>A Global Collaboration of Macaque Researchers</p>
+        <h1>Dr. William J. O'Hearn</h1>
+        <p>Postdoctoral Research Associate</p>
+         <p>Centre for Research in Animal Behaviour​ </p>
       </header>
       
-      <p>MacaqueNet is a global grassroots network, whose mission is to encourage and facilitate collaboration between macaque researchers. Through cross-species comparative research, we can address questions that single-species studies cannot.</p>
-
-      <ul class="actions">
-        <li><a href="{{ 'about' | absolute_url }}" class="button big">Find Out More</a></li> 
-      </ul>
     </div>
   </section>
