--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
         <nav id="menu">
             <!-- Logo -->
             <a href="{{ site.url | absolute_url }}" id="sidelogo">
-                <img src="/assets/images/MacaqueNet_Logo_V04-colourB.png" alt=""/>
+                <img src="/assets/images/DSC_0163" alt=""/>
             </a>
 
             <header class="major">
@@ -25,10 +25,21 @@
                 <h2>Get In Touch</h2>
             </header>
             <ul class="contact">
-                <li class="fa-envelope-o">
+                <li class="fa-envelope-o"></li>
                     <a href="mailto:w.ohearn2@exeter.ac.uk" target="_blank"
-                        >w.ohearn2@exeter.ac.uk</a
-                    >
+                        >w.ohearn2@exeter.ac.uk</a>
+                    
+                <li class="fa fa-x"></li>
+                    <a href="https://x.com/Will_0_Tree" target="_blank"
+                        >@Will_0_Tree</a>
+                
+                <li class="fa">☁️</li>
+                    <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
+                        >@williamohearn</a>
+
+                 <li class="fa fa-rss"></li>
+                    <a href="https://willswandering.wordpress.com/" target="_blank"
+                        >blog</a>
             </ul>
         </section>
 
