--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,19 +25,19 @@
                 <h2>Get In Touch</h2>
             </header>
             <ul class="contact">
-                <li class="fa-envelope-o"></li>
+                <li class="fa-envelope-o">
                     <a href="mailto:w.ohearn2@exeter.ac.uk" target="_blank"
                         >w.ohearn2@exeter.ac.uk</a>
                     
-                <li class="fa fa-x"></li>
+                <li class="fa fa-x">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
                         >@Will_0_Tree</a>
                 
-                <li class="fa">☁️</li>
+                <li class="fa">☁️
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
                         >@williamohearn</a>
 
-                 <li class="fa fa-rss"></li>
+                 <li class="fa fa-rss">
                     <a href="https://willswandering.wordpress.com/" target="_blank"
                         >blog</a>
             </ul>
