--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,19 +27,19 @@
             <ul class="contact">
                 <li class="fa-envelope-o">
                     <a href="mailto:w.ohearn2@exeter.ac.uk" target="_blank"
-                        >w.ohearn2@exeter.ac.uk</a>
+                        >w.ohearn2@exeter.ac.uk</a></li>
                     
                 <li class="fa fa-x">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
-                        >@Will_0_Tree</a>
+                        >@Will_0_Tree</a></li>
                 
                 <li class="fa">☁️
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
-                        >@williamohearn</a>
+                        >@williamohearn</a></li>
 
                  <li class="fa fa-rss">
                     <a href="https://willswandering.wordpress.com/" target="_blank"
-                        >blog</a>
+                        >blog</a></li>
             </ul>
         </section>
 
