--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,22 +27,30 @@
             <ul class="contact">
                 <li class="fa-envelope-o">
                     <a href="mailto:w.ohearn2@exeter.ac.uk" target="_blank"
-                        >w.ohearn2@exeter.ac.uk</a></li>
+                        >w.ohearn2@exeter.ac.uk</a
+                    >
+                </li>
                     
-                <li class="fa fa-x">
+                <li class="fa-brands fa-x">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
-                        >@Will_0_Tree</a></li>
+                        >@Will_0_Tree</a
+                    >
+                </li>
                 
                 <li class="fa">☁️
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
-                        >@williamohearn</a></li>
+                        >@williamohearn</a
+                    >
+                </li>
 
                  <li class="fa fa-rss">
                     <a href="https://willswandering.wordpress.com/" target="_blank"
-                        >blog</a></li>
+                        >blog</a
+                    >
+                 </li>
             </ul>
         </section>
-
+        
 
 <!-- Footer -->
         <footer id="footer">
