--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,7 +31,7 @@
                     >
                 </li>
                     
-                <li class="fa-brands fa-x">
+                <li class="fa-solid fa-x">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
                         >@Will_0_Tree</a
                     >
