--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,11 +31,11 @@
                     >
                 </li>
                     
-                <li class="fa-solid fa-x">
+                <i class="fa-solid fa-x">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
                         >@Will_0_Tree</a
                     >
-                </li>
+                </i>
                 
                 <li class="fa">☁️
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
