--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,13 +31,13 @@
                     >
                 </li>
                     
-                <i class="fa-solid fa-x">
+                <li class="fa-solid fa-user">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
                         >@Will_0_Tree</a
                     >
-                </i>
+                </li>
                 
-                <li class="fa">☁️
+                <li class="fa-solid fa-user">
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
                         >@williamohearn</a
                     >
