--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,27 +30,22 @@
                         >w.ohearn2@exeter.ac.uk</a
                     >
                 </li>
-                    
-                <li class="fa-solid fa-user">
+                <li class="fa-github">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
-                        >@Will_0_Tree</a
+                        >X</a
                     >
                 </li>
-                
-                <li class="fa-solid fa-user">
+                <li class="fa-brands fa-slack">
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
-                        >@williamohearn</a
+                        >Bluesky</a
                     >
                 </li>
-
-                 <li class="fa fa-rss">
+                <li class="fa-brands fa-slack">
                     <a href="https://willswandering.wordpress.com/" target="_blank"
-                        >blog</a
+                        >Blog</a
                     >
-                 </li>
             </ul>
         </section>
-        
 
 <!-- Footer -->
         <footer id="footer">
