--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,30 +20,30 @@
         </nav>
 
         <!-- Section -->
-        <section>
+ <section>
             <header class="major">
                 <h2>Get In Touch</h2>
             </header>
             <ul class="contact">
                 <li class="fa-envelope-o">
                     <a href="mailto:w.ohearn2@exeter.ac.uk" target="_blank"
-                        >w.ohearn2@exeter.ac.uk</a
-                    >
+                        >w.ohearn2@exeter.ac.uk</a>
                 </li>
-                <li class="fa-github">
+                    
+                <li class="fa-solid fa-user">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
-                        >X</a
-                    >
+                        >@Will_0_Tree</a>
                 </li>
-                <li class="fa-brands fa-slack">
+                
+                <li class="fa-solid fa-user">
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
-                        >Bluesky</a
-                    >
+                        >@williamohearn</a>
                 </li>
-                <li class="fa-brands fa-slack">
+
+                 <li class="fa fa-rss">
                     <a href="https://willswandering.wordpress.com/" target="_blank"
-                        >Blog</a
-                    >
+                        >blog</a>
+                 </li>
             </ul>
         </section>
 
