--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,17 +32,17 @@
                     
                 <li class="fa-solid fa-user">
                     <a href="https://x.com/Will_0_Tree" target="_blank"
-                        >@Will_0_Tree</a>
+                        >X/@Will_0_Tree</a>
                 </li>
                 
                 <li class="fa-solid fa-user">
                     <a href="https://bsky.app/profile/williamohearn.bsky.social" target="_blank"
-                        >@williamohearn</a>
+                        >Bluesky/@williamohearn</a>
                 </li>
 
                  <li class="fa fa-rss">
                     <a href="https://willswandering.wordpress.com/" target="_blank"
-                        >blog</a>
+                        >Blog</a>
                  </li>
             </ul>
         </section>
