add photos alter header

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,14 +2,20 @@
   <section id="banner">
     <div class="content">
       <span class="image left">
-        <img src="assets/images/Will_powerpose.JPG" alt=""  />
+        <img src="DSC9377.jpg" alt=""  />
       </span>
-      
-      <header>
-        <h1>Dr. William J. O'Hearn</h1>
-        <p>Postdoctoral Research Associate</p>
-         <p>Centre for Research in Animal Behaviour​ </p>
-      </header>
-      
-    </div>
+        </div>
   </section>
+  
+  <section id="banner">
+    <div class="content">
+       <header>
+        <h2>Dr. William J. O'Hearn</h2>
+        <h3>Postdoctoral Research Associate</h3>
+         <h3>Centre for Research in Animal Behaviour​ </h3>
+      </header>
+        </div>
+  </section>
+    
+      
+  
