--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,17 +1,15 @@
 <!-- Banner -->
   <section id="banner">
-    <div class="content">
-      <span class="image left">
-        <img src="DSC9377.jpg" alt=""  />
-      </span>
-     
-       <header>
-        <h2>Dr. William J. O'Hearn</h2>
-        <h3>Postdoctoral Research Associate</h3>
-         <h3>Centre for Research in Animal Behaviour​ </h3>
-      </header>
-        </div>
-  </section>
+  <div class="image-container">
+    <img src="DSC9377.jpg" alt="Dr. O'Hearn">
+    <div class="overlay-text">
+      <h2>Dr. William J. O'Hearn</h2>
+      <h3>Postdoctoral Research Associate</h3>
+      <h3>Centre for Research in Animal Behaviour</h3>
+    </div>
+  </div>
+</section>
+
     
       
   
