--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <!-- Banner -->
   <section id="banner">
   <div class="image-container">
-    <img src="DSC9377.jpg" alt="Dr. O'Hearn">
+    <img src="assets/images/DSC9377.jpg" alt="">
     <div class="overlay-text">
       <h2>Dr. William J. O'Hearn</h2>
       <h3>Postdoctoral Research Associate</h3>
@@ -11,5 +11,3 @@
 </section>
 
     
-      
-  
