--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,13 +1,14 @@
 <!-- Banner -->
   <section id="banner">
-  <div class="image-container">
-    <img src="assets/images/DSC9377.jpg" alt="">
-    <div class="overlay-text">
+    <div class="content">
+      <span class="image center">
+        <img src="assets/images/DSC9377.jpg" alt=""  />
+      </span>
+      
+      <header>
       <h2>Dr. William J. O'Hearn</h2>
       <h3>Postdoctoral Research Associate</h3>
       <h3>Centre for Research in Animal Behaviour</h3>
+      </header>
     </div>
-  </div>
-</section>
-
-    
+  </section>
