--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,14 +2,12 @@
 <!-- Banner -->
 <section id="banner" style="position: relative; width: 100%; max-width: 800px; margin: auto;">
   <div class="content">
-    <span class="image left" style="display: block;">
-      <img src="assets/images/DSC9377.jpg" alt="" style="width: 100%; height: auto; max-width: 1000px;">
+    <span class="image">
+      <img src="assets/images/DSC9377.jpg" alt="" style="width:"500"">
     </span>
     
-    <header style="position: absolute; top: 50%; left: 20px; transform: translateY(-50%); color: white; text-align: left; padding: 10px;">
       <h2>Dr. William J. O'Hearn</h2>
       <h3>Postdoctoral Research Associate</h3>
       <h3>Centre for Research in Animal Behaviour</h3>
-    </header>
   </div>
 </section>
