--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,7 +3,7 @@
 <section id="banner" style="position: relative; width: 100%; max-width: 800px; margin: auto;">
   <div class="content">
     <span class="image">
-      <img src="assets/images/DSC9377.jpg" alt="" style="width:"500"">
+      <img src="assets/images/DSC9377.jpg" alt="" width="1000" height="auto">
     </span>
     
       <h2>Dr. William J. O'Hearn</h2>
