--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,6 @@
 
 <!-- Banner -->
-<section id="banner" style="position: relative; width: 100%; max-width: 800px; margin: auto;">
+<section id="banner">
   <div class="content">
     <span class="image">
       <img src="assets/images/DSC9377.jpg" alt="" width="1000" height="auto">
