--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,13 +17,14 @@
             width: 100%;
             height: 300px; /* Adjust height as needed */
             background-image: url('assets/images/DSC9377.jpg');
-            background-size: cover;
+            background-size: contain; /* Show full image without cropping */
+            background-repeat: no-repeat;
             background-position: center;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start; /* Align text to the left */
             color: white;
-            text-align: center;
+            padding-left: 40px; /* Add space from the left edge */
             position: relative;
         }
 
@@ -36,16 +36,17 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+            background: rgba(0, 0, 0, 0.3); /* Subtle dark overlay */
         }
 
         .content {
             position: relative;
             z-index: 1;
+            text-align: left; /* Align text to the left */
         }
 
         h2, h3 {
-            margin: 10px 0;
+            margin: 5px 0;
         }
     </style>
 </head>
